Refactored course controllers and their exception handlers to centralize error handling and simplify controller flow.
1. Even though the main goal was refactoring course controllers +
handlers, we also had to update the service layer:
1.1 Replaced batch operations with single-entity operations (more
predictable flow and simpler handling).
1.2 Reworked exceptions so handlers can extract the needed context
(e.g., courseId) reliably.
1.3 Updated WebMvc + service tests to match the new flow and signatures.

2. 1.3 Updated WebMvc + service tests to match the new flow and
signatures.